--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.3",
     "pino-roll": "^4.0.0",
+    "prom-client": "^15.1.3",
     "redis": "^5.10.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
