--- a/ops/docker-compose.yml
+++ b/ops/docker-compose.yml
@@ -51,6 +51,8 @@ services:
   temp:
     image: 545plea/temp:latest
     container_name: temp
+    volumes:
+      - ./logs:/app/logs
     env_file:
       - ./.env
     depends_on:
