--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -127,3 +127,24 @@ jobs:
 
           CHECKOUT_RETURN_URL: http://localhost:3001/checkout/return
           CHECKOUT_SUCCESS_URL: http://localhost:3001/checkout/success
+
+  notify:
+    name: Notify Discord
+    runs-on: ubuntu-latest
+    needs: [unit, lint, e2e]
+    if: always()
+    steps:
+      - name: Send Discord Notification
+        uses: sarisia/actions-status-discord@v1.16.0
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          status: ${{ needs.unit.result != 'failure' && needs.lint.result != 'failure' && needs.e2e.result != 'failure' && 'success' || 'failure' }}
+          title: 'CI Pipeline'
+          description: |
+            **Commit:** ${{ github.event.head_commit.message }}
+            **Triggered by:** ${{ github.actor }}
+            **Branch:** ${{ github.ref_name }}
+            **Repository:** ${{ github.repository }}
+          url: '${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+          username: GitHub Actions
+          avatar_url: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
