--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -72,3 +72,24 @@ jobs:
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           CURRENT_SHA: ${{ github.sha }}
           DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}
+
+  notify:
+    name: Notify Discord
+    runs-on: ubuntu-latest
+    needs: [deploy]
+    if: always()
+    steps:
+      - name: Send Discord Notification
+        uses: sarisia/actions-status-discord@v1.16.0
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          status: ${{ needs.deploy.result != 'failure' && 'success' || 'failure' }}
+          title: 'Production Deployment'
+          description: |
+            **Commit:** ${{ github.event.workflow_run.head_commit.message }}
+            **Triggered by:** ${{ github.actor }}
+            **Branch:** ${{ github.ref_name }}
+            **Repository:** ${{ github.repository }}
+          url: '${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+          username: GitHub Actions
+          avatar_url: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
