--- a/ops/docker-compose.yml
+++ b/ops/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     volumes:
       - postgres_data_temp:/var/lib/postgresql
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres_123
-      - POSTGRES_DB=postgres
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     healthcheck:
       test: ['CMD', 'pg_isready', '-U', 'postgres']
       interval: 30s
