--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.997.0",
     "@aws-sdk/client-sqs": "^3.997.0",
+    "@aws-sdk/s3-presigned-post": "^3.998.0",
     "@aws-sdk/s3-request-presigner": "^3.997.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
