used cloudfron to generate presigned get url

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ POLAR_ORGANIZATION_ID=
 
 CHECKOUT_RETURN_URL=
 CHECKOUT_SUCCESS_URL=
+
+CLOUDFRONT_PUBLIC_KEY_ID=
+CLOUDFRONT_DISTRIBUTION_DOMAIN=
+CLOUDFRONT_PRIVATE_KEY=
