--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -128,6 +128,10 @@ jobs:
           CHECKOUT_RETURN_URL: http://localhost:3001/checkout/return
           CHECKOUT_SUCCESS_URL: http://localhost:3001/checkout/success
 
+          CLOUDFRONT_PUBLIC_KEY_ID: dummy-cloudfront-public-key-id
+          CLOUDFRONT_DISTRIBUTION_DOMAIN: https://dummy-cloudfront-distribution-domain.com
+          CLOUDFRONT_PRIVATE_KEY: dummy-cloudfront-private-key
+
   notify:
     name: Notify Discord
     runs-on: ubuntu-latest
