--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,21 @@
 DATABASE_URL=
+POSTGRES_PASSWORD=postgres_123
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
 REDIS_URL=
 NODE_ENV=
 
 SERVICE_NAME=temp
 BASE_URL=
 FRONTEND_URL=
+
 LOG_LEVEL=info
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 DOMAIN=
 
 JWT_PRIVATE_KEY=
+
 JWT_PUBLIC_KEY=
 
 AWS_REGION=
@@ -30,3 +35,7 @@ POLAR_ORGANIZATION_ID=
 
 CHECKOUT_RETURN_URL=
 CHECKOUT_SUCCESS_URL=
+
+CLOUDFRONT_PUBLIC_KEY_ID=
+CLOUDFRONT_DISTRIBUTION_DOMAIN=
+CLOUDFRONT_PRIVATE_KEY=
