--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,6 @@ CHECKOUT_SUCCESS_URL=
 CLOUDFRONT_PUBLIC_KEY_ID=
 CLOUDFRONT_DISTRIBUTION_DOMAIN=
 CLOUDFRONT_PRIVATE_KEY=
+
+UPLOAD_PRESIGNED_POST_URL_TTL_SECONDS=
+LINKS_PRESIGNED_GET_URL_TTL_SECONDS=
