--- a/ops/docker-compose.yml
+++ b/ops/docker-compose.yml
@@ -43,6 +43,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     command: npx prisma migrate deploy
     restart: no
     networks:
