--- a/ops/docker-compose.yml
+++ b/ops/docker-compose.yml
@@ -53,6 +53,7 @@ services:
   temp:
     image: 545plea/temp:latest
     container_name: temp
+    mem_limit: 512m
     volumes:
       - ./logs:/app/logs
     env_file:
